--- a/css/styles.css
+++ b/css/styles.css
@@ -487,7 +487,7 @@ img {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  -webkit-text-fill-color: #ffffff;
+
   border: 1px solid #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -510,7 +510,7 @@ img {
   align-items: center;
   justify-content: center;
   border-radius: 4px;
-
+  /* padding: 16px 32px; */
   cursor: pointer;
   margin: 0 auto;
 
