--- a/css/styles.css
+++ b/css/styles.css
@@ -466,69 +466,65 @@ img {
 .form-subscribe {
   margin-left: auto;
 }
-
 .text-subscribe {
-  margin-bottom: 16px;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-
   color: #ffffff;
+  margin-bottom: 16px;
 }
+
+.subscribe {
+  display: flex;
+  gap: 24px;
+}
+
 .group-subscribe {
   display: flex;
-  gap: 16px;
 }
-
 .form {
   width: 264px;
   height: 40px;
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
-
   border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-
-  padding: 8px 212px 8px 16px;
-  background-color: transparent;
-  outline: transparent;
+  color: #ffffff;
 }
 
-.form:focus,
-.form:hover {
-  border-color: #4d5ae5;
+.form::placeholder {
+  color: #ffffff;
 }
 
 .submit-button {
-  width: 165px;
+  min-width: 165px;
   height: 40px;
-
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 4px;
-  /* padding: 16px 32px; */
-  cursor: pointer;
-  margin: 0 auto;
 
-  border: none;
-  background-color: var(--brand-color);
-
-  font-family: inherit;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: var(--white-color);
+  color: #ffffff;
 
+  border: none;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  fill: #ffffff;
+  margin-left: 24px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .submit-icon {
-  fill: #ffffff;
   margin-left: 16px;
 }
 
@@ -536,7 +532,6 @@ img {
 .submit-button:focus {
   background-color: var(--active-color);
 }
-
 /* __________PORTFOLIO ST#2_____________ */
 
 .portfolio {
