--- a/css/styles.css
+++ b/css/styles.css
@@ -481,9 +481,9 @@ img {
   gap: 24px;
 }
 
-.group-subscribe {
+/* .group-subscribe {
   display: flex;
-}
+} */
 .form {
   width: 264px;
   height: 40px;
