--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,8 @@ img {
   margin-bottom: 8px;
 }
 
-.about-title {
+.about-title,
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -481,9 +482,6 @@ img {
   gap: 24px;
 }
 
-/* .group-subscribe {
-  display: flex;
-} */
 .form {
   width: 264px;
   height: 40px;
@@ -515,6 +513,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
+  border-radius: 4px;
 
   border: none;
   cursor: pointer;
@@ -751,13 +750,11 @@ img {
   line-height: 1.17;
   letter-spacing: 0.04em;
   outline: transparent;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal-input:focus {
   border-color: #4d5ae5;
-  padding-left: 38px;
 }
 .modal-input:focus + .modal-icon {
   fill: #4d5ae5;
@@ -768,6 +765,10 @@ img {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-field-comment {
+  margin-bottom: 16px;
 }
 
 .input-label {
@@ -783,13 +784,17 @@ img {
 .modal-comment {
   width: 100%;
   height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   resize: none;
   padding: 8px 16px;
   outline: transparent;
-  margin-bottom: 16px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
+  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .modal-comment:focus {
@@ -813,12 +818,15 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   margin-right: 8px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.policy{
+  color: #4d5ae5; ;
+}
 .model-check:checked + .check-text span {
   background-color: #404bbf;
   border: none;
