--- a/css/styles.css
+++ b/css/styles.css
@@ -751,6 +751,7 @@ img {
   letter-spacing: 0.04em;
   outline: transparent;
   padding-left: 38px;
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:focus {
@@ -794,7 +795,7 @@ img {
   padding: 8px 16px;
   outline: transparent;
   background-color: transparent;
-  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-comment:focus {
@@ -804,7 +805,6 @@ img {
   margin-bottom: 24px;
 }
 .check-text {
-  display: flex;
   align-items: center;
   font-size: 12px;
   line-height: 1.17;
@@ -822,10 +822,12 @@ img {
   align-items: center;
   justify-content: center;
   fill: transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.policy{
-  color: #4d5ae5; ;
+.policy {
+  color: #4d5ae5;
 }
 .model-check:checked + .check-text span {
   background-color: #404bbf;
