--- a/css/styles.css
+++ b/css/styles.css
@@ -519,7 +519,6 @@ img {
   cursor: pointer;
   background-color: #4d5ae5;
   fill: #ffffff;
-  margin-left: 24px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -757,16 +756,17 @@ img {
 .modal-input:focus {
   border-color: #4d5ae5;
 }
-.modal-input:focus + .modal-icon {
-  fill: #4d5ae5;
-}
 
 .modal-icon {
   position: absolute;
   left: 16px;
   top: 50%;
+  fill: #2e2f42;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus + .modal-icon {
+  fill: #4d5ae5;
 }
 .modal-field-comment {
   margin-bottom: 16px;
@@ -792,6 +792,7 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   resize: none;
+  display: block;
   padding: 8px 16px;
   outline: transparent;
   background-color: transparent;
@@ -825,6 +826,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 .policy {
   color: #4d5ae5;
